--- a/styles/pages/_landing.scss
+++ b/styles/pages/_landing.scss
@@ -363,9 +363,8 @@ span::selection {
 .header {
 	align-items: center;
 	display: flex;
-	height: 4rem;
+	height: 5rem;
 	justify-content: center;
-	margin-bottom: 1.5rem;
 	position: absolute;
 		top: calc(100vh - 8rem);
 		left: 0;
@@ -375,25 +374,23 @@ span::selection {
 
 	// HEADER LOGO
 	&-logo {
+		align-self: flex-bottom;
 		display: flex;
 		flex-direction: column;
-		height: 2.8rem;
+		height: 4.25rem;
 		margin: 0;
-		margin-bottom: 0.3rem;
 		pointer-events: all;
-		width: 3rem;
+		width: 4.25rem;
 	
 		&:hover {
 			cursor: pointer;
 		}
 		&-link {
-			align-items: flex-start;
 			display: flex;
-			height: 100%;
+			height: 4.25rem;
 			flex-direction: column;
-			gap: 0.25rem;
-			justify-content: space-between;
-			width: 100%;
+			padding: 0.55rem;
+			width: 4.25rem;
 
 			@media only screen and (min-width: 640px) {
 				//silence
@@ -415,6 +412,7 @@ span::selection {
 
 	// SOCIAL LIST
 	&-list {
+		align-self: flex-end;
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
@@ -442,12 +440,13 @@ span::selection {
 						@include fill($lightmode--darkest-fill, 1);
 				}
 				display: flex;
+				height: 4rem;
 				width: 4rem;
 			}
 
 			&-link {
 				display: flex;
-				decoration: none;
+				text-decoration: none;
 				height: 4rem;
 				width: 4rem;
 			}
@@ -458,7 +457,7 @@ span::selection {
 	.navbar {
 		align-items: flex-end;
 		display: flex;
-		height: 4rem;
+		height: 5rem;
 		justify-content: space-between;
 		margin: 0 auto;
 		padding: 0 1rem;
@@ -667,10 +666,48 @@ span::selection {
 		&:hover {
 			cursor: pointer;
 		}
+
+		outline-color: $stiletto;
+		outline-offset: 0rem;
+		outline-style: solid;
+		outline-width: 0rem;
+		transition-duration: 0.3s, 0.3s;
+		transition-property: outline-color, outline-offset;
+		transition-timing-function: ease-out, ease-out;
+
+		&:focus {
+			border-radius: 5rem;
+			outline-offset: 0.2rem;
+			outline-width: 0.3rem;
+		}
+
 	}
 	&--title {
 		color: $stiletto;
 		text-decoration: none;
+
+		&--link {
+			//animations
+			outline-color: $stiletto;
+			// @media (prefers-color-scheme: light) {
+			// 	@include outline-color($lightmode--light-outline-color);
+			// }
+			// @media (prefers-color-scheme: dark) {
+			// 		@include outline-color($darkmode--light-outline-color);
+			// }
+			outline-offset: 0rem;
+			outline-style: solid;
+			outline-width: 0rem;
+			transition-duration: 0.3s, 0.3s;
+			transition-property: outline-color, outline-offset;
+			transition-timing-function: ease-out, ease-out;
+
+			&:focus {
+				border-radius: 0.2rem;
+				outline-offset: 0.2rem;
+				outline-width: 0.3rem;
+			}
+		}
 	}
 	&--interest {
 		align-items: center; // top or bottom
